// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an event view component with all props 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <p
        className="documentDescription"
      >
        Hi
      </p>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p>",
          }
        }
      />
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          What
        </div>
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Guillotina
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Volto
          </div>
        </div>
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <div
          className="ui dividing sub header"
        >
          All dates
        </div>
        <div
          className="ui dividing sub header"
        >
          Where
        </div>
        <p>
          Volto, Plone
        </p>
        <div
          className="ui dividing sub header"
        >
          Contact Name
        </div>
        <p>
          <a
            href="mailto:test@example.com"
          >
            John Doe
          </a>
        </p>
        <div
          className="ui dividing sub header"
        >
          Contact Phone
        </div>
        <p>
          0123456789
        </p>
        <div
          className="ui dividing sub header"
        >
          Attendees
        </div>
        <div
          className="ui list"
          role="list"
        >
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            John Doe
          </div>
          <div
            className="item"
            onClick={[Function]}
            role="listitem"
          >
            Mario Rossi
          </div>
        </div>
        <div
          className="ui dividing sub header"
        >
          Website
        </div>
        <p>
          <a
            href="https://www.example.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Visit external website
          </a>
        </p>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <p
        className="documentDescription"
      >
        Hi
      </p>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p>",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`renders an event view component with only required props 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
    </div>
  </div>
</div>
`;

exports[`renders an event view component without links to api in the text 1`] = `
<div
  className="ui container view-wrapper event-view"
  id="page-document"
>
  <div
    className="ui grid"
  >
    <div
      className="seven wide column mobile hidden"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p><p>This is an <a href=\\"/foo/bar\\">internal link</a> and a <a href=\\"/foo/baz\\">second link</a></p>",
          }
        }
      />
    </div>
    <div
      className="five wide column mobile hidden"
    >
      <aside
        className="ui right floated segment"
      >
        <div
          className="ui dividing sub header"
        >
          When
        </div>
        <div
          className="download-event"
        >
          <svg
            className="icon"
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
            onClick={null}
            style={
              Object {
                "fill": "currentColor",
                "height": "36px",
                "width": "auto",
              }
            }
            viewBox=""
            xmlns=""
          />
          <a
            className="ics-download"
            href="http://localhost:8080/Plone/++api++/my-page/ics_view"
            rel="noreferrer"
            target="_blank"
          >
            Download Event
          </a>
        </div>
      </aside>
    </div>
    <div
      className="mobile only twelve wide column"
    >
      <h1
        className="documentFirstHeading"
      >
        Hello World!
      </h1>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "<p>Hello World!</p><p>This is an <a href=\\"/foo/bar\\">internal link</a> and a <a href=\\"/foo/baz\\">second link</a></p>",
          }
        }
      />
    </div>
  </div>
</div>
`;
